# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]

name = "pypi_hworld_runetech"
version = "1.0.0"
description = "Practice project for learning about publishing the packages on the pypi."
readme = "README.md"
authors = [
    {name = "Rune Tech", email = "runetech2024@gmail.com"}
]
license = { file = "LICENSE" }

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

keywords = [
    "sample",
    "basic"
]

dependencies = [
    "beautifulsoup4 >= 4.12.3"
]

requires-python = ">=3.11"

[project.urls]

Homepage = "https://github.com/runetech0/pypi-hello-world"
github = "https://github.com/runetech0/pypi-hello-world"


[tool.bumpver]
current_version = "1.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]

"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"hello_runetech/__init__.py" = ["{version}"]

